package Monopoly;

public class Turnos {
    int result;
    String name;
    public Turnos(int result, String name) {
        this.result = result;
        this.name = name;
    }
}
